the z-index issue is solved by giving position relative to all the parent div

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
 
 
 .header{
+  position: relative;
+  z-index: 1000;
   width: 100%;
   height: 60px;
   background-color: transparent;
@@ -84,6 +86,8 @@
 /* hello section css */
 
 .main-hello{
+  position: relative;
+  z-index: 1000;
   height: calc(100vh - 60px - 50px);
   width: 100%;
   padding: 0px 80px;
@@ -179,6 +183,8 @@
 
 
 .hello-image{
+  position: relative;
+  z-index: 1000;
   width: 40%;
   height: 60vh;
 }
@@ -193,6 +199,8 @@
 
 
 .footer{
+  position: relative;
+  z-index: 1000;
   width: 100%;
   display: flex;
   justify-content: flex-start;
